remove extra content and fix headings on mobile version

--- a/style.css
+++ b/style.css
@@ -611,7 +611,7 @@ MOBILE VERSION
         color: #1A0EAB;
         font-family: Arial, Helvetica, sans-serif;
         font-size: 1.6rem;
-        font-weight: 100;
+        font-weight: 300;
 }
 
     .exp h5{
